k8s/service.yaml
# The service manifest used by ensembl-client review apps in ensembl-k8s-manifests repo
apiVersion: v1
kind: Service
metadata:
  name: ensembl-tools-api-<DEPLOYMENT_ENV>-svc
  labels:
    app: ensembl-tools-api-<DEPLOYMENT_ENV>-svc
spec:
  selector:
    app: ensembl-tools-api-<DEPLOYMENT_ENV>
  type: ClusterIP
  ports:
    - name: tools-api
      port: 8013
      protocol: TCP
      targetPort: 8013
