k8s/ingress.yaml
# The ingress manifest used by ensembl-client review apps in ensembl-k8s-manifests repo
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ensembl-tools-api-<SUB_DOMAIN>-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: <SUB_DOMAIN>.review.ensembl.org
    http:
      paths:
        - path: /api/tools/(.*)
          backend:
            serviceName: ensembl-tools-api-<DEPLOYMENT_ENV>-svc
            servicePort: 8013
